// Copyright 2024 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.access_graph.v1;

import "teleport/header/v1/metadata.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/accessgraph/v1;accessgraphv1";

// The `AuthorizedKey` message represents an authorized key entry for a specific local user.
// These authorized keys are generated by the server when a particular SSH AuthorizedKey is granted access to a user on the node.
message AuthorizedKey {
  // metadata is the AuthorizedKey's metadata.
  teleport.header.v1.Metadata metadata = 1;
  // kind is a resource kind.
  string kind = 2;
  // sub_kind is an optional resource sub kind, used in some resources.
  string sub_kind = 3;
  // version is version.
  string version = 4;
  // Spec is an AuthorizedKey specification.
  AuthorizedKeySpec spec = 5;
}

// AuthorizedKeySpec is the authorized key spec.
message AuthorizedKeySpec {
  // host_id is the node identifier and must match the credentials used.
  string host_id = 1;
  // key_fingerprint is the SHA256 SSH public key fingerprint.
  string key_fingerprint = 2;
  // host_user is the user who can be accessed using the fingerprint above.
  string host_user = 3;
  // key_comment is the authorized key's comment.
  // Authorized keys consist of the following space-separated fields:
  // options, keytype, base64-encoded key, comment.  The options field is optional.
  string key_comment = 4;
  // key_type is the ssh's key type.
  string key_type = 5;
}
